--- a/app/src/main/res/layout/activity_summary.xml
+++ b/app/src/main/res/layout/activity_summary.xml
@@ -92,8 +92,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
+            android:layout_column="0"
             android:layout_rowWeight="1"
-            android:layout_column="1"
             android:layout_columnWeight="1"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game" />
@@ -104,6 +104,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="0"
+            android:layout_column="1"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game" />
 
@@ -113,6 +115,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="0"
+            android:layout_column="2"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -123,6 +127,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="0"
+            android:layout_column="3"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -133,6 +139,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="1"
+            android:layout_column="0"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -143,6 +151,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="1"
+            android:layout_column="1"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -153,6 +163,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="1"
+            android:layout_column="2"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -163,6 +175,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="1"
+            android:layout_column="3"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -173,6 +187,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="2"
+            android:layout_column="0"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -183,6 +199,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="2"
+            android:layout_column="1"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -193,6 +211,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="2"
+            android:layout_column="2"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -203,6 +223,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="2"
+            android:layout_column="3"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -213,6 +235,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="3"
+            android:layout_column="0"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -223,6 +247,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="3"
+            android:layout_column="1"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -233,6 +259,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="3"
+            android:layout_column="2"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -243,6 +271,8 @@
             android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_row="3"
+            android:layout_column="3"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_game"
             grid:layout_gravity="center" />
@@ -269,17 +299,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <WebView
+    <LinearLayout
         android:id="@+id/word_cloud"
         android:layout_width="300dp"
         android:layout_height="300dp"
-        android:background="#FFC107"
+        android:background="#00FFFF"
         android:visibility="invisible"
+        app:fontFamily="@font/sen_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bar_graph"
@@ -297,7 +331,7 @@
 
         <LinearLayout
             android:id="@+id/bar1"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="15dp"
@@ -306,7 +340,7 @@
 
             <TextView
                 android:id="@+id/genre1"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#4CAF50"
                 android:gravity="center_vertical|end"
@@ -330,7 +364,7 @@
 
         <LinearLayout
             android:id="@+id/bar2"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
@@ -338,7 +372,7 @@
 
             <TextView
                 android:id="@+id/genre2"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#4CAF50"
                 android:gravity="center_vertical|end"
@@ -362,7 +396,7 @@
 
         <LinearLayout
             android:id="@+id/bar3"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
@@ -370,7 +404,7 @@
 
             <TextView
                 android:id="@+id/genre3"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#4CAF50"
                 android:gravity="center_vertical|end"
@@ -394,7 +428,7 @@
 
         <LinearLayout
             android:id="@+id/bar4"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginBottom="15dp"
             android:layout_weight="1"
@@ -402,7 +436,7 @@
 
             <TextView
                 android:id="@+id/genre4"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#4CAF50"
                 android:gravity="center_vertical|end"
@@ -426,7 +460,7 @@
 
         <LinearLayout
             android:id="@+id/bar5"
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="60dp"
             android:layout_marginBottom="10dp"
             android:layout_weight="1"
@@ -434,7 +468,7 @@
 
             <TextView
                 android:id="@+id/genre5"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#4CAF50"
                 android:gravity="center_vertical|end"
