--- a/app/src/main/res/layout/activity_end_of_wrapped.xml
+++ b/app/src/main/res/layout/activity_end_of_wrapped.xml
@@ -118,7 +118,7 @@
                 android:id="@+id/line1a"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
@@ -126,8 +126,8 @@
 
                 <ImageView
                     android:id="@+id/image1a"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="#4CAF50"
                     android:src="@drawable/ic_game" />
 
@@ -135,12 +135,72 @@
                     android:id="@+id/text1a"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="60dp"
+                    android:layout_marginHorizontal="10dp"
                     android:fontFamily="@font/sen_bold"
                     android:gravity="center"
                     android:text="@string/random_text"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="11sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/line2a"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image2a"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="#4CAF50"
+                    android:src="@drawable/ic_game" />
+
+                <TextView
+                    android:id="@+id/text2a"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:fontFamily="@font/sen_bold"
+                    android:gravity="center"
+                    android:text="@string/random_text"
+                    android:textColor="#000000"
+                    android:textSize="11sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/line3a"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image3a"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="#4CAF50"
+                    android:src="@drawable/ic_game" />
+
+                <TextView
+                    android:id="@+id/text3a"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:fontFamily="@font/sen_bold"
+                    android:gravity="center"
+                    android:text="@string/random_text"
+                    android:textColor="#000000"
+                    android:textSize="11sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
@@ -163,7 +223,7 @@
                 android:id="@+id/line1b"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginStart="40dp"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="10dp"
                 android:layout_weight="1"
@@ -171,8 +231,8 @@
 
                 <ImageView
                     android:id="@+id/image1b"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:background="#4CAF50"
                     android:src="@drawable/ic_game" />
 
@@ -180,12 +240,72 @@
                     android:id="@+id/text1b"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="60dp"
+                    android:layout_marginHorizontal="10dp"
                     android:fontFamily="@font/sen_bold"
                     android:gravity="center"
                     android:text="@string/random_text"
                     android:textColor="#000000"
-                    android:textSize="20sp"
+                    android:textSize="11sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/line2b"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image2b"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="#4CAF50"
+                    android:src="@drawable/ic_game" />
+
+                <TextView
+                    android:id="@+id/text2b"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:fontFamily="@font/sen_bold"
+                    android:gravity="center"
+                    android:text="@string/random_text"
+                    android:textColor="#000000"
+                    android:textSize="11sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/line3b"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/image3b"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:background="#4CAF50"
+                    android:src="@drawable/ic_game" />
+
+                <TextView
+                    android:id="@+id/text3b"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="10dp"
+                    android:fontFamily="@font/sen_bold"
+                    android:gravity="center"
+                    android:text="@string/random_text"
+                    android:textColor="#000000"
+                    android:textSize="11sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
@@ -195,9 +315,9 @@
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:background="#65FF3B"
-            android:columnCount="2"
-            android:rowCount="8"
-            android:visibility="invisible"
+            android:columnCount="8"
+            android:rowCount="2"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/bar_graph"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -210,8 +330,8 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_row="0"
+                android:layout_column="0"
                 android:layout_rowWeight="1"
-                android:layout_column="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
                 android:src="@drawable/ic_game" />
@@ -220,6 +340,8 @@
                 android:id="@+id/cover2"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="1"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -229,6 +351,8 @@
                 android:id="@+id/cover3"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="2"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -239,6 +363,8 @@
                 android:id="@+id/cover4"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="3"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -249,6 +375,8 @@
                 android:id="@+id/cover5"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="4"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -259,6 +387,8 @@
                 android:id="@+id/cover6"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="5"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -269,6 +399,8 @@
                 android:id="@+id/cover7"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="6"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -279,6 +411,8 @@
                 android:id="@+id/cover8"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="0"
+                android:layout_column="7"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -289,6 +423,8 @@
                 android:id="@+id/cover9"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="0"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -299,6 +435,8 @@
                 android:id="@+id/cover10"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="1"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -309,6 +447,8 @@
                 android:id="@+id/cover11"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="2"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -319,6 +459,8 @@
                 android:id="@+id/cover12"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="3"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -329,6 +471,8 @@
                 android:id="@+id/cover13"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="4"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -339,6 +483,8 @@
                 android:id="@+id/cover14"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="5"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -349,6 +495,8 @@
                 android:id="@+id/cover15"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="6"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -359,6 +507,8 @@
                 android:id="@+id/cover16"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_row="1"
+                android:layout_column="7"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
                 android:scaleType="centerCrop"
@@ -381,7 +531,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.985">
 
-            <View
+            <TextView
                 android:id="@+id/bar1"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
@@ -389,44 +539,71 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/sen_bold"
+                android:gravity="center|top"
+                android:text="@string/random_text"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp"
+                android:textStyle="bold"
                 android:background="#4CAF50" />
 
-            <View
+            <TextView
                 android:id="@+id/bar2"
                 android:layout_width="0dp"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:layout_gravity="bottom"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/sen_bold"
+                android:gravity="center|top"
+                android:text="@string/random_text"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp"
+                android:textStyle="bold"
                 android:background="#4CAF50" />
 
-            <View
+            <TextView
                 android:id="@+id/bar3"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="100dp"
                 android:layout_gravity="bottom"
                 android:layout_marginEnd="30dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/sen_bold"
+                android:gravity="center|top"
+                android:text="@string/random_text"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp"
+                android:textStyle="bold"
                 android:background="#4CAF50" />
 
-            <View
+            <TextView
                 android:id="@+id/bar4"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
-                android:layout_gravity="bottom"
-                android:layout_marginEnd="30dp"
+                android:layout_height="100dp"
+                android:gravity="center|top"                android:layout_marginEnd="30dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/sen_bold"
+                android:text="@string/random_text"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp"
+                android:textStyle="bold"
                 android:background="#4CAF50" />
 
-            <View
+            <TextView
                 android:id="@+id/bar5"
                 android:layout_width="0dp"
-                android:layout_height="75dp"
+                android:layout_height="100dp"
                 android:layout_gravity="bottom"
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
+                android:fontFamily="@font/sen_bold"
+                android:gravity="center|top"
+                android:text="@string/random_text"
+                android:textColor="#FFFFFF"
+                android:textSize="11sp"
+                android:textStyle="bold"
                 android:background="#4CAF50" />
-
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
