--- a/app/src/main/res/layout/activity_game_nav.xml
+++ b/app/src/main/res/layout/activity_game_nav.xml
@@ -5,6 +5,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_lightning_bolt"
     tools:context=".GameNavActivity">
 
 
@@ -13,6 +14,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:fontFamily="@font/sen_bold"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,6 +36,8 @@
     <Button
         android:id="@+id/openAlertButton"
         android:layout_width="wrap_content"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/sen_bold"
         android:layout_height="wrap_content"
         android:text="Create Game"
         android:layout_alignParentBottom="true"
@@ -48,6 +52,8 @@
         android:id="@+id/back_to_stats_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@drawable/rounded_button"
+        android:fontFamily="@font/sen_bold"
         android:layout_margin="8dp"
         android:text="Back to Stats"
         android:textAllCaps="false"
