--- a/app/src/main/res/layout/fragment_full_screen_red.xml
+++ b/app/src/main/res/layout/fragment_full_screen_red.xml
@@ -1,17 +1,21 @@
 
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-tools:context=".GameNavActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:animation="@anim/fade_in_animation"
+    tools:context=".GameNavActivity">
 
 <TextView
     android:id="@+id/game_status_text_view"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
-    android:text="@string/game_in_development"
+    android:text="Word Search Game"
+    android:fontFamily="@font/sen_bold"
+    android:gravity="center"
+    android:textSize="20sp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent" />
@@ -46,6 +50,7 @@ tools:context=".GameNavActivity">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Exit"
+    android:fontFamily="@font/sen_bold"
     android:layout_gravity="top|start"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
